--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ffmpeg-static": "^4.0.1",
     "google-tts-api": "0.0.4",
     "minecraft-server-util": "^1.1.0",
-    "opusscript": "0.0.7"
+    "opusscript": "0.0.7",
+    "youtube-info": "^1.3.2"
   },
   "engines": {
     "node": "8.x"
