--- a/package.json
+++ b/package.json
@@ -10,24 +10,22 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "discord.js": "^11.6.3",
     "express": "^4.17.1",
-    "ffmpeg-static": "^4.0.1",
-    "google-tts-api": "0.0.4",
+    "discord.js": "^11.6.3",
     "minecraft-server-util": "^1.1.0",
-    "opusscript": "0.0.7",
-    "youtube-info": "^1.3.2"
+    "google-tts-api": "^0.0.4",
+    "ffmpeg-static": "^4.0.1",
+    "opusscript": "^0.0.7",
+    "youtube-info": "^1.3.2",
+    "fs": "^0.0.2",
+    "trello-node-api": "^0.0.8"
   },
   "engines": {
-    "node": "8.x"
-  },
-  "repository": {
-    "url": "https://github.com/Cannicide/zh-bot"
+    "node": "10.x"
   },
   "license": "MIT",
   "keywords": [
     "node",
-    "Discord Bot",
     "express"
   ]
 }
