--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "//1": "describes your app and its dependencies",
+  "//1": "A nodejs discord bot powered by discord.js.",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
+  "name": "zh-bot",
+  "version": "3.1.4",
+  "description": "The official discord bot of ZombieHorde.net",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "discord.js": "^11.6.3",
-    "minecraft-server-util": "^1.1.0",
-    "google-tts-api": "^0.0.4",
-    "ffmpeg-static": "^4.0.1",
+    "discord.js": "^12.5.0",
+    "minecraft-server-util": "^3.1.0",
+    "google-tts-api": "^0.0.6",
+    "ffmpeg-static": "^4.2.7",
     "opusscript": "^0.0.7",
     "youtube-info": "^1.3.2",
     "fs": "^0.0.2",
-    "trello-node-api": "^0.0.8"
+    "trello-node-api": "^0.0.8",
+    "body-parser": "^1.19.0",
+    "node-fetch": "^2.6.1"
   },
   "engines": {
-    "node": "10.x"
+    "node": "12.x"
   },
   "license": "MIT",
   "keywords": [
     "node",
+    "zhorde",
     "express"
   ]
 }
