--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "express": "^4.17.1",
     "discord.js": "^12.5.0",
     "minecraft-server-util": "^3.1.0",
-    "google-tts-api": "^0.0.6",
     "ffmpeg-static": "^4.2.7",
     "opusscript": "^0.0.7",
     "youtube-info": "^1.3.2",
     "fs": "^0.0.2",
     "trello-node-api": "^0.0.8",
     "body-parser": "^1.19.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "mathjs": "^8.0.1"
   },
   "engines": {
     "node": "12.x"
