--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
   "name": "zh-bot",
-  "version": "3.1.4",
+  "version": "3.4.4",
   "description": "The official discord bot of ZombieHorde.net",
   "main": "server.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "trello-node-api": "^0.0.8",
     "body-parser": "^1.19.0",
     "node-fetch": "^2.6.1",
-    "mathjs": "^8.0.1"
+    "mathjs": "^8.0.1",
+    "node-schedule": "^1.3.2"
   },
   "engines": {
     "node": "12.x"
