--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "//1": "A nodejs discord bot powered by discord.js.",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "zh-bot",
-  "version": "3.4.4",
+  "name": "panaceabot",
+  "version": "3.7.7",
   "description": "The official discord bot of ZombieHorde.net",
   "main": "server.js",
   "scripts": {
@@ -13,15 +13,12 @@
     "express": "^4.17.1",
     "discord.js": "^12.5.0",
     "minecraft-server-util": "^3.1.0",
-    "ffmpeg-static": "^4.2.7",
-    "opusscript": "^0.0.7",
-    "youtube-info": "^1.3.2",
-    "fs": "^0.0.2",
     "trello-node-api": "^0.0.8",
     "body-parser": "^1.19.0",
     "node-fetch": "^2.6.1",
     "mathjs": "^8.0.1",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "quick.db": "^7.1.2"
   },
   "engines": {
     "node": "12.x"
