--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "//1": "A nodejs discord bot powered by discord.js.",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
   "name": "panaceabot",
-  "version": "3.7.7",
+  "version": "4.0.0",
   "description": "The official discord bot of ZombieHorde.net",
-  "main": "server.js",
+  "main": "./src/index.js",
+  "author": {
+    "name": "Cannicide"
+  },
   "scripts": {
-    "start": "node server.js"
+    "start": "pm2 start ./src/index.js --name=panacea",
+    "test": "node ./src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "discord.js": "^12.5.0",
-    "minecraft-server-util": "^3.1.0",
-    "trello-node-api": "^0.0.8",
-    "body-parser": "^1.19.0",
-    "node-fetch": "^2.6.1",
-    "mathjs": "^8.0.1",
-    "node-schedule": "^1.3.2",
-    "quick.db": "^7.1.2"
+    "discord-arts-zhorde": "^1.0.1",
+    "discord.js": "^14.11.0",
+    "djs-vidar": "^1.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "miniget": "^4.2.3",
+    "sequelize": "^6.32.1",
+    "sifbase": "^1.0.2",
+    "sqlite3": "^5.1.6",
+    "trello-node-api": "^0.0.9"
   },
   "engines": {
-    "node": "12.x"
+    "node": "18.x"
   },
   "license": "MIT",
   "keywords": [
